# rui-backend

./: Cargo.toml
backend/app/: Cargo.toml  Config.toml
backend/app/src/: config.rs  main.rs
backend/client/: Cargo.toml
backend/client/src/: client.rs  handlers.rs  lib.rs
backend/rpc/: Cargo.toml
backend/rpc/src/: api.rs  error.rs  handlers.rs  lib.rs  request.rs  server.rs
circuit/: semaphore.circom  semaphore.r1cs
circuit/main_js/: semaphore.wasm
