[package]
name = "rui-backend-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rui-backend-client = { workspace = true }
rui-backend-rpc = { workspace = true }

# WASM operations
wasmer = "4.4.0"
wasmer-wasix = { version = "0.28.0" }
fnv = { version = "1.0.7", default-features = false }
num = { version = "0.4.3" }
num-traits = { version = "0.2.16", default-features = false }
num-bigint = { version = "0.4.3", default-features = false, features = ["rand"] }

# ZKP Generation
ark-crypto-primitives = { version = "0.4.0" }
ark-ec = { version = "0.4.2", default-features = false, features = ["parallel"] }
ark-ff = { version = "0.4.2", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "0.4.0", default-features = false, features = ["parallel"] }
ark-bn254 = { version = "0.4.0" }
ark-groth16 = { version = "0.4.0", default-features = false, features = ["parallel"] }
ark-poly = { version = "0.4.2", default-features = false, features = ["parallel"] }
ark-relations = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
ark-circom = { git = "https://github.com/gakonst/ark-circom.git" }

# Misc
hex = "0.4.3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
