[package]
name = "rui-backend-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rui-backend-client = { workspace = true }
rui-backend-rpc = { workspace = true }

# Misc
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
