[package]
name = "rui-backend-client"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sui-keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys"}
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk"}
shared-crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto"}
tokio = { version = "1.2", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
dirs = "5.0"
hex = "0.4.3"

# WASM operations
wasmer = "4.4.0"
wasmer-wasix = { version = "0.28.0" }
fnv = { version = "1.0.7", default-features = false }
num = { version = "0.4.3" }
num-traits = { version = "0.2.16", default-features = false }
num-bigint = { version = "0.4.3", default-features = false, features = ["rand"] }

# ZKP Generation
ark-crypto-primitives = { version = "0.4.0" }
ark-ec = { version = "0.4.2", default-features = false, features = ["parallel"] }
ark-ff = { version = "0.4.2", default-features = false, features = ["parallel", "asm"] }
ark-std = { version = "0.4.0", default-features = false, features = ["parallel"] }
ark-bn254 = { version = "0.4.0" }
ark-groth16 = { version = "0.4.0", default-features = false, features = ["parallel"] }
ark-poly = { version = "0.4.2", default-features = false, features = ["parallel"] }
ark-relations = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.2", default-features = false }
ark-circom = { git = "https://github.com/gakonst/ark-circom.git" }
