[package]
name = "rui-backend-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rui-backend-client = { workspace = true }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
async-trait = "0.1"
jsonrpsee = { version = "0.24", features = ["server", "macros"] }
jsonrpsee-types = "0.24"
thiserror = "2"
tracing = "0.1"
tower-http = { version = "0.6.1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
hyper = "1.5.0"
